# ros2_openvino_toolkit

./: .travis.yml
.github/ciscript/: ci_build_ros2_openvino_toolkit.sh  ci_test_ros2_openvino_toolkit.sh
.github/workflows/: blank.yml  dev-ov_2020-3.yml  dev-ov_2021-3.yml
dynamic_vino_lib/: CMakeLists.txt
openvino_common/: CMakeLists.txt  openvino_common-extras.cmake  package.xml
openvino_common/cmake/: openvino_coverage.cmake
sample/: CMakeLists.txt  package.xml
script/: codecov_build_test.sh  codecov_lcov.bash
vino_param_lib/: CMakeLists.txt  package.xml
