<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openvino_common</name>
  <version>0.3.0</version>
  <description>Common support codecov</description>
  <maintainer email="congx.liu@intel.com">Carl Delsey</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_core</buildtool_depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
